# techlog-article

./: .dockerignore  .eslintignore  .eslintrc.js  .gitignore  .jest.config.js  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  jest.config.js  main.py  package.json  pyproject.toml  requirements.production.txt  requirements.test.txt  requirements.txt  tsconfig.build.json  tsconfig.json
.github/actions/: dependencies.yaml
.github/actions/dependencies/: action.yaml
.github/actions/test/: action.yaml
.github/workflows/: pr_check.yaml
common/article/: __init__.py  _article.py  _base.py  base.py
common/dependencies/: oauth2.py
common/schema/article/: __init__.py  _article.py
common/schema/auth/: __init__.py  _auth.py
common/schema/user/: __init__.py  _user.py
common/user/: __init__.py  _base.py  _user.py
core/: __init__.py  config.py
core/database/: session.py
db_migration/: env.py
db_migration/versions/: 2023_04_22_1103-cc40bcb48d81_set_db_auth_config.py  2023_04_22_1556-e2acdb9df438_create_user_and_auth_and_article_tables.py  2023_04_22_1556-e2acdb9df438_create_user_and_auth_tables.py  add_thumbnail_url_column_to_article__2024_02_10_1238-7e5bd7671bb6.py  create_user_auth_article_tables_2023_05_03_2135-4e1781b175df.py
internal/auth/: __init__.py  _service.py
prisma/: schema.prisma
public/me/: compSci.md  education.md  externalLinks.md  hobbies.md  shortIntro.md  workExperience.md
routers/: __init__.py
routers/article/: __init__.py  _router.py
routers/article/_schema/: request.py  response.py
routers/auth/: __init__.py  _router.py
routers/auth/_schema/: request.py
routers/user/: __init__.py  _router.py
routers/user/_schema/: request.py  response.py
src/: app.ts  dump.rdb  server.ts
src/api/: index.ts
src/api/admin/: admin.controller.ts  admin.dto.ts  admin.login.repository.ts  admin.login.service.ts
src/api/articles/: articles.controller.ts  articles.repository.ts  articles.service.ts
src/api/main/: main.controller.ts  main.dto.ts  main.repository.ts  main.service.ts
src/api/me/: me.controller.ts  me.dto.ts  me.service.ts
src/common/: customs.d.ts  types.ts
src/common/exceptions/: badRequestError.ts  index.ts  internalError.ts  notFoundError.ts  unAuthorizedError.ts
src/common/interfaces/: controller.ts  repository.ts  service.ts
src/lib/: db.ts
src/techlog_article/: __main__.py  server.py
src/techlog_article/auth/: __init__.py
src/techlog_article/common/: config.py  consts.py  exceptions.py  utils.py
src/techlog_article/user/: __init__.py
src/tests/lib/: mockup.ts  utils.ts
src/utils/: config.ts
src/utils/middlewares/: jwt.middleware.ts  (+1 more)
techlog_article/: main.py  server.py
techlog_article/common/: config.py  tags.py
tests/: __init__.py  conftest.py
ts-archive/: .eslintrc.js  README.md  jest.config.js  tsconfig.build.json
(+143 files in other folders)
