[tool.poetry]
name = "techlog"
version = "0.1.0"
description = "a microservice for CRUD operations for the Techlog project"
authors = ["UponTheSky <sailing.to.orbis@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.9"
python-multipart = "^0.0.6"
uvicorn = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.27.0"
httpx = "^0.24.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.254"
alembic = "^1.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
testcontainers-postgres = "^0.0.1rc1"
alembic = "^1.10.4"

[tool.ruff]

[tool.black]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
