[tool.poetry]
name = "techlog"
version = "0.1.0"
description = "a microservice for CRUD operations for the Techlog project"
authors = ["UponTheSky <sailing.to.orbis@gmail.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["full"], version = "^0.104.1"}
sqlalchemy = "^2.0.23"
python-multipart = "^0.0.6"
uvicorn = "^0.21.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
asyncpg = "^0.29.0"
httpx = "^0.25.2"
google-cloud-firestore = "^2.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"
alembic = "^1.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
testcontainers-postgres = "^0.0.1rc1"
alembic = "^1.10.4"
testcontainers-mongodb = "^0.0.1rc1"

[tool.ruff]

[tool.black]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
